--- a/index.html
+++ b/index.html
@@ -8,35 +8,44 @@
 </head>
 <body>
     <main>
-        <section id=”container”>
-            <article class=”cartao”>
-                <div class=”cartao__conteudo”>
+        <section id="container">
+            <article class="cartao">
+                <div class="cartao__conteudo">
                     <h3>Programação</h3>
-                    <div class=”cartao__conteudo__pergunta”>
-<p>O que é JavaScript?</p>
-</div>
-<div class=”cartao__conteudo__resposta”>
-<p>O JavaScript é uma linguagem de programação</p>
-</div>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>O que é JavaScript?</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                        <p>O JavaScript é uma linguagem de programação</p>
+                    </div>
                 </div>
-</article>
-
-<article class="cartao">
-        <div class="cartao__conteudo">
-                <h3> Programação </h3>
-                      <div class="cartao__conteudo__pergunta">
-                            <p>O que é CSS?</p>
-                        </div>                        
-                       <div class="cartao__conteudo__resposta">
-                            <p>O CSS é uma linguagem de estilização.</p>
-                         </div>
-                        </div>
-                            
-         </article>
-</section>
-</main>
-<footer>
-<p>Projeto desenvolvido por Lilian Tomé, sem fins lucrativos</p>
-</footer>
+            </article>
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Programação</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>O que é CSS?</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                    <p>O CSS é uma linguagem de estilização</p>
+                    </div>
+                </div>
+            </article>
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Programação</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>O que é CSS?</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                    <p>O CSS é uma linguagem de estilização</p>
+                    </div>
+                </div>
+            </article>
+        </section>
+    </main>
+    <footer>
+        <p>Projeto desenvolvido por Lilian Tomé</p>
+    </footer>
 </body>
 </html>
